// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo node delete "frodo node delete --all": should not delete any nodes if they are all in use 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo TriVir [b672336b-41ef-428d-ae4a-e0c082875377]
Error deleting custom node Display Callback
  Error deleting custom node Display Callback
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/ef81b1a52c914710b3388caebfe7233a-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node Has Session AM
  Error deleting custom node Has Session AM
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/session-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node Display State
  Error deleting custom node Display State
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/8ab9f1aad4b4460a9c45d15fb148e221-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node Vector ALU
  Error deleting custom node Vector ALU
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/c15e2efb3deb4d4ea338c74a6440b69f-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node Has Session
  Error deleting custom node Has Session
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/c605506774a848f7877b4d17a453bd39-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node ALU
  Error deleting custom node ALU
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/c6063fb2f5dc42dd9772bedc93898bd8-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
✔ Deleted custom nodes.
"
`;

exports[`frodo node delete "frodo node delete --node-id c605506774a848f7877b4d17a453bd39-1": should display error when the custom node with id 'c605506774a848f7877b4d17a453bd39-1' cannot be deleted since it is being used 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo TriVir [b672336b-41ef-428d-ae4a-e0c082875377]
✖ Error: Error deleting custom node c605506774a848f7877b4d17a453bd39-1
Error deleting custom node c605506774a848f7877b4d17a453bd39-1
  Network error:
    URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/c605506774a848f7877b4d17a453bd39-1
    Status: 400
    Code: ERR_BAD_REQUEST
    Reason: Bad Request
    Message: Cannot delete node type that is in use
"
`;

exports[`frodo node delete "frodo node delete --node-name 'Unknown'": should display error when the custom node named 'Unknown' cannot be deleted since it doesn't exist 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo TriVir [b672336b-41ef-428d-ae4a-e0c082875377]
✖ Error: Error deleting custom node Unknown
Error deleting custom node Unknown
  Error reading custom node Unknown
    Custom node 'Unknown' not found
"
`;

exports[`frodo node delete "frodo node delete -a": should delete all nodes that are not being used 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account Frodo TriVir [b672336b-41ef-428d-ae4a-e0c082875377]
Error deleting custom node Display Callback
  Error deleting custom node Display Callback
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/ef81b1a52c914710b3388caebfe7233a-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node Has Session AM
  Error deleting custom node Has Session AM
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/session-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node Display State
  Error deleting custom node Display State
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/8ab9f1aad4b4460a9c45d15fb148e221-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node Vector ALU
  Error deleting custom node Vector ALU
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/c15e2efb3deb4d4ea338c74a6440b69f-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node Has Session
  Error deleting custom node Has Session
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/c605506774a848f7877b4d17a453bd39-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
Error deleting custom node ALU
  Error deleting custom node ALU
    Network error:
      URL: https://openam-frodo-dev.forgeblocks.com/am/json/node-designer/node-type/c6063fb2f5dc42dd9772bedc93898bd8-1
      Status: 400
      Code: ERR_BAD_REQUEST
      Reason: Bad Request
      Message: Cannot delete node type that is in use
✔ Deleted custom nodes.
"
`;

exports[`frodo node delete "frodo node delete -i e5ad0110c8ee4dafaae983003cd05d4a": should delete the custom node with service name 'e5ad0110c8ee4dafaae983003cd05d4a' 1`] = `""`;

exports[`frodo node delete "frodo node delete -n 'Generate JWT'": should delete the custom node named 'Generate JWT' 1`] = `""`;
